--- a/gocheetah-core/src/main/resources/application.yml
+++ b/gocheetah-core/src/main/resources/application.yml
@@ -5,8 +5,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/gocheetah-db
-    password: Welcome+123
-    username: root
+    password: root
+    username: 123
   jpa:
     hibernate:
       ddl-auto: update
